# singularity-calendar

./: CONTRIBUTING.md  README.md  meson.build
data/: dev.sinty.calendar.desktop  dev.sinty.calendar.gschema.xml  dev.sinty.calendar.json
po/: POTFILES.in  meson.build
resources/: dev.sinty.calendar.gresource.xml
src/: app.vala  goa_provider.vala  local_provider.vala  main.vala  window.vala
ui/: main.vetro
